# norns

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  TODO.md  build.sh  build_compatibility.md  clang-format.sh  cmake_verification_plan.md  docker-compose.yml  edge.sh  matronrc.lua  prd_project_level_changes.md  readme-setup.md  readme.md  verify_cmake_builds.sh  verify_third_party_builds.sh  waf_to_cmake_migration.md  wscript
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  ci.yml  linux-build.Dockerfile  pi-build.Dockerfile
cmake/toolchains/: README.md  cm3.toolchain.cmake  compiler_flags.cmake  desktop.toolchain.cmake  pi3.toolchain.cmake
crone/: CMakeLists.txt
crone/src/: BufDiskWorker.cpp  BufDiskWorker.h  Bus.h  Client.h  Commands.h  MixerClient.h  Poll.h  SoftcutClient.h  Tape.h  Utilities.h  cos_win.h
crone/src/effects/: StereoCompressor.h  ZitaReverb.h
crone/tests/: CMakeLists.txt  README.md  test_basic.cpp  test_helpers.cpp  test_helpers.h
lua/: .luacheckrc
lua/core/: arc.lua  audio.lua  clock.lua  config.lua  controlspec.lua  crow.lua  encoders.lua  engine.lua  gamepad.lua  grid.lua  help.lua  hid.lua  hid_device_class.lua  hook.lua  keyboard.lua  menu.lua  metro.lua  midi.lua  mods.lua  norns.lua  osc.lua  paramset.lua  pmap.lua  poll.lua  screen.lua  script.lua  softcut.lua  startup.lua  state.lua  vport.lua  wifi.lua
lua/core/crow/: public.lua  quote.lua
lua/core/gamepad_model/: index.lua  xbox_360.lua
lua/core/keymap/: be.lua  char_modifier.lua  cz.lua  de.lua  dk.lua  ee.lua  es.lua  fr.lua  gr.lua  hr.lua  hu.lua  ie.lua  is.lua  it.lua  jp.lua  kp.lua  lv.lua  no.lua  pl.lua  pt.lua  ro.lua  rs.lua  ru.lua  se.lua  sk.lua  uk.lua  us.lua
lua/core/menu/: devices.lua  display.lua  home.lua  mix.lua  mods.lua  params.lua  preview.lua  reset.lua  restart.lua  select.lua  settings.lua  sleep.lua  system.lua  tape.lua  update.lua  wifi.lua
lua/core/params/: binary.lua  control.lua  file.lua  group.lua  number.lua  option.lua  separator.lua  taper.lua  text.lua  trigger.lua
lua/engine/: polysub.lua
lua/extn/sky/: prelude.lua  unstable.lua  v1.lua
lua/extn/sky/core/: object.lua
lua/extn/sky/v1/core/: event.lua  process.lua
lua/extn/sky/v1/device/: arp.lua  behavior.lua  filter.lua  make_note.lua  switcher.lua  transform.lua  utility.lua  virtual.lua
lua/lib/: asl.lua  beatclock.lua  elca.lua  envgraph.lua  er.lua  fileselect.lua  filtergraph.lua  filters.lua  formatters.lua  graph.lua  gridbuf.lua  hotswap.lua  intonation.lua  lattice.lua  lfo.lua  listselect.lua  pattern_time.lua  reflection.lua  sequins.lua  tabutil.lua  textentry.lua  textentry_kbd.lua  timeline.lua  ui.lua  util.lua  voice.lua
lua/lib/container/: defaulttable.lua  defaulttable_test.lua  deque.lua  deque_test.lua  observable_test.lua  weaktable.lua
lua/lib/test/: luaunit.lua
maiden-repl/: CMakeLists.txt  README.md
maiden-repl/src/: io.c
maiden-repl/tests/: CMakeLists.txt  README.md  test_basic.c  test_helpers.c  test_helpers.h
matron/: CMakeLists.txt  wscript
matron/src/: args.c  clock.c  event_system.c  event_system.h  event_types.h  events.c  jack_client.c  jack_client.h  main.c  oracle.c  oracle.h  screen_events.c  screen_events.h  weaver.c  weaver.h
matron/src/clocks/: clock_link.c  clock_link.h  clock_link_stub.c  clock_scheduler.c
matron/src/device/: device.c  device_list.c  device_midi.c  device_monitor.c
matron/src/hardware/: gpio.c  hal.c  hal.h  io.h  platform.c  platform.h  screen.c  screen.h
matron/src/hardware/screen/: sdl.c  ssd1322.c
matron/tests/: CMakeLists.txt  Makefile  README.md  hal_mock.c  test_event_system.c  test_event_system_runner.c  test_hal.c  test_hal_runner.c  test_helpers.c  test_helpers.h  test_runner.c  unity_config.h  wscript
sc/: CMakeLists.txt  README.md  install_extensions.sh  sc_setup.sh
sc/tests/: sc_extensions_test.scd  test_sc_installation.cmake
tests/: CMakeLists.txt  test_example.c
watcher/: CMakeLists.txt  README.md
watcher/src/: main.c
ws-wrapper/: CMakeLists.txt
ws-wrapper/src/: main.c  ws_wrapper.c  ws_wrapper.h
ws-wrapper/tests/: CMakeLists.txt  IMPROVEMENTS.md  README.md  test_ws_wrapper.c
